# fastprimes

./: CMakeLists.txt  Primes.cxx  Primes.h  README.md  config.h.in
